--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,67 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- * Vista 1 -->
+    <main class="main-1">
+      <section class="carrusel"></section>
+      <div class="contenedor-btn">
+        <button class="btn-principal">Saltar</button>
+      </div>
+    </main>
+    <!-- * Fin Vista 1 -->
+
+    <!-- * Vista 2 -->
+    <main class="main-2">
+      <div class="contenedor-logo-principal"></div>
+      <div class="contenedor-btn-secundario">
+        <p>Únete a la Comunidad #OnlyPaws</p>
+        <button class="btn-contraste">Registrarse</button>
+        <button class="btn-google"><img src="img/google.png" alt="ícono Google">Registrarse con Google</button>
+      </div>
+      <div class="contenedor-btn">
+        <p>¿Ya tienes una cuenta?</p>
+        <button class="btn-principal">Iniciar Sesión</button>
+      </div>
+    </main>
+    <!-- * Fin Vista 2 -->
+
+    <!-- * Vista 3 -->
+    <main class="main-3">
+      <form action="" class="form-datos">
+        <input type="text" name="" id="" placeholder="Nombre Completo">
+        <input type="email" name="" id="" placeholder="Correo Electrónico">
+        <input type="text" name="" id="" placeholder="Nombre de Mascota">
+      </form>
+      <form action="" class="form-fecha">
+        <label for="">Fecha de nacimiento o de adopción de la mascota</label>
+        <div class="contenedor-fecha">
+          <input type="text" name="" id="" placeholder="Mes">
+          <input type="text" name="" id="" placeholder="Día">
+          <input type="text" name="" id="" placeholder="Año">
+        </div>
+      </form>
+      <article class="contenedor-seleccion-mascota">
+        <div class="seleccion-mascota">
+          <div class="seleccion-perro"></div>
+          <div class="seleccion">
+            <input type="radio" name="mascota" id="Perro">
+            <label for="Perro">Perro</label>
+          </div>
+        </div>
+        <div class="seleccion-mascota">
+          <div class="seleccion-gato"></div>
+          <div class="seleccion">
+            <input type="radio" name="mascota" id="Gato">
+            <label for="Gato">Gato</label>
+          </div>
+        </div>
+      </article>
+      <div class="contenedor-btn">
+        <button class="btn-principal">Continuar</button>
+        <a href="#">¿Ya tienes una cuenta? Inicia Sesión</a>
+      </div>
+    </main>
+    <!-- * Fin Vista 3 -->
     <script type="module" src="main.js"></script>
   </body>
 </html>
