--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,21 @@
     </main>
     <!-- * Fin Vista 3 -->
 
+     <!-- * Vista 4 -->
+     <main class="main-4">
+      <div class="contenedor-logo-principal"></div>
+
+      <form action="" class="form-datos">
+        <input type="new" name="" id="" placeholder="Nueva Contraseña">
+        <input type="repeat" name="" id="" placeholder="Repetir Contraseña">
+      </form>
+
+      <div class="contenedor-btn">
+        <button class="btn-principal">Registrarse</button>
+      </div>
+    </main>
+       <!-- * Fin Vista 4 -->
+
     <script type="module" src="main.js"></script>
   </body>
 </html>
