--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     
      <!-- * Vista 4 -->
      <main class="main-4">
-      <div class="contenedor-logo-principal"></div>
+      <div class="contenedor-ilustracion-contraseña"></div>
 
       <form action="" class="form-datos">
         <input type="new" name="" id="" placeholder="Nueva Contraseña">
@@ -108,7 +108,24 @@
         <button class="btn-principal">Registrarse</button>
       </div>
     </main>
-       <!-- * Fin Vista 4 -->
+    <!-- * Fin Vista 4 -->
+    <!-- * Vista 5 -->
+    <main class="main-5">
+      <!-- <div class="contenedor-logo-principal"></div> -->
+      <h1>Iniciar Sesión</h1>
+      <form action="" class="form-datos">
+        <label for="login-correo-electronico">Ingresa tu correo electrónico:</label>
+        <input type="new" name="" id="login-correo-electronico">
+        <label for="login-contraseña">Ingresa tu contraseña:</label>
+        <input type="repeat" name="" id="login-contraseña">
+      </form>
+      <div class="contenedor-btn">
+        <button class="btn-google"><img src="img/google.png" alt="ícono Google">Iniciar con Google</button>
+        <button class="btn-principal">Iniciar Sesión</button>
+        <a href="#">¿Olvidaste tu contraseña?</a>
+      </div>
+    </main>
+    <!-- * Fin Vista 5-->
     <script src="https://kit.fontawesome.com/a90d1ac3f5.js" crossorigin="anonymous"></script>
     <script type="module" src="main.js"></script>
   </body>
