Sofi: Vista pérdida de contraseña y error 404

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
     </main>
     <!-- * Fin Vista 3 -->
     
-     <!-- * Vista 4 -->
+    <!-- * Vista 4 -->
      <main class="main-4">
       <div class="contenedor-ilustracion-contraseña"></div>
 
@@ -109,6 +109,7 @@
       </div>
     </main>
     <!-- * Fin Vista 4 -->
+
     <!-- * Vista 5 -->
     <main class="main-5">
       <!-- <div class="contenedor-logo-principal"></div> -->
@@ -126,6 +127,31 @@
       </div>
     </main>
     <!-- * Fin Vista 5-->
+
+    <!-- * Vista 6 -->
+    <main class="main-6">
+      <form action="" class="form-datos">
+        <label for="correo-electronico-recuperacion">
+          Si olvidaste tu contraseña confirma el correo electrónico con el cual te registrarte para enviarte un enlace de recuperación. Procura revisar en la carpeta de Spam si no encuentras nuestro mensaje.
+        </label>
+        <input type="new" name="" id="correo-electronico-recuperacion">
+      </form>
+      <div class="contenedor-pawtita">
+        <div class="contenedor-btn">
+          <button class="btn-principal">Enviar Correo</button>
+        </div>
+      </div>
+    </main>
+    <!-- * Fin Vista 6 -->
+    <!-- * Vista 7 -->
+    <main class="main-7">
+      <div class="contenedor-perrito-404"></div>
+      <article class="contenedor-texto-404">
+        <h1>Error 404</h1>
+        <h2>No puedo encontrar tu página en este zapato</h2>
+      </article>
+    </main>
+    <!-- * Fin Vista 7 -->
     <script src="https://kit.fontawesome.com/a90d1ac3f5.js" crossorigin="anonymous"></script>
     <script type="module" src="main.js"></script>
   </body>
