--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       <div class="contenedor-btn">
         <button class="btn-principal">Saltar</button>
       </div>
-    </main> 
+    </main> -->
     <!-- * Fin Vista 1 -->
 
     <!-- * Vista 2 -->
@@ -45,21 +45,8 @@
       <div class="contenedor-btn-secundario">
         <p>Únete a la Comunidad #OnlyPaws</p>
         <button class="btn-contraste">Registrarse</button>
-        <div id = "app">
         <button class="btn-google"><img src="img/google.png" alt="ícono Google">Registrarse con Google</button>
-
-        <form id="google-form">
-          <div id="user-info"></div>
-          <input
-          type="text"
-          id="google-input"
-          placeholder="Nuevo todo ..."
-          autocomplete="off"
-          />
-        </form>
-        <div id="google-container"></div>
       </div>
-    </div>
 
       <div class="contenedor-btn">
         <p>¿Ya tienes una cuenta?</p>
@@ -107,7 +94,7 @@
         <button class="btn-principal">Continuar</button>
         <a href="#login-principal">¿Ya tienes una cuenta? Inicia Sesión</a>
       </div>
-    </main> 
+    </main> -->
     <!-- * Fin Vista 3 -->
     
     <!-- * Vista 4 -->
