--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <div id="root"></div>
   <body>
+    <div id="root"></div>
 
     <!-- * Vista 1 -->
     <!-- <main class="main-1">
@@ -57,18 +57,34 @@
 
     <!-- * Vista 3 -->
     <!-- <main class="main-3">
-      <form action="" class="form-datos">
+      <form action="" id="nombre-correo" class="form-datos">
         <input type="text" name="" id="" placeholder="Nombre Completo">
         <input type="email" name="" id="" placeholder="Correo Electrónico">
-        <input type="text" name="" id="" placeholder="Nombre de Mascota">
       </form>
 
+      <form action="" id="contraseña-nueva" class="form-datos">
+        <input type="password" name="" id="" placeholder="Nueva Contraseña">
+        <input type="password" name="" id="" placeholder="Repetir Contraseña">
+      </form>
+
+      <div class="contenedor-btn">
+        <button class="btn-principal">Continuar</button>
+        <a href="#login-principal">¿Ya tienes una cuenta? Inicia Sesión</a>
+      </div>
+    </main> -->
+    <!-- * Fin Vista 3 -->
+    
+    <!-- * Vista 4 -->
+     <!-- <main class="main-4">
+      <div class="contenedor-ilustracion-contraseña"></div>
+
       <form action="" class="form-fecha">
+        <input type="text" name="" id="nombre-mascota" placeholder="Nombre de Mascota">
         <label for="">Fecha de nacimiento o de adopción de la mascota</label>
         <div class="contenedor-fecha">
-          <input type="text" name="" id="" placeholder="Mes">
-          <input type="text" name="" id="" placeholder="Día">
-          <input type="text" name="" id="" placeholder="Año">
+          <input type="text" name="" id="dia" placeholder="Día">
+          <input type="text" name="" id="mes" placeholder="Mes">
+          <input type="text" name="" id="anho" placeholder="Año">
         </div>
       </form>
 
@@ -89,22 +105,6 @@
           </div>
         </div>
       </article>
-
-      <div class="contenedor-btn">
-        <button class="btn-principal">Continuar</button>
-        <a href="#login-principal">¿Ya tienes una cuenta? Inicia Sesión</a>
-      </div>
-    </main> -->
-    <!-- * Fin Vista 3 -->
-    
-    <!-- * Vista 4 -->
-     <!-- <main class="main-4">
-      <div class="contenedor-ilustracion-contraseña"></div>
-
-      <form action="" class="form-datos">
-        <input type="new" name="" id="" placeholder="Nueva Contraseña">
-        <input type="repeat" name="" id="" placeholder="Repetir Contraseña">
-      </form>
 
       <div class="contenedor-btn">
         <button class="btn-principal">Registrarse</button>
