--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
      </main> -->
     <!-- * Fin Vista 8 -->
     <!-- * Vista 9 -->
-    <main class="main-9">
+    <!-- <main class="main-9">
       <header id="header" class="vista-8-header">
         <div class="header-profile">
           <img src="img/dueña.jpg" alt="Profile Picture" class="profile-image">
@@ -252,7 +252,7 @@
           <i class="fa-solid fa-dog"></i>
         </button>
       </footer>
-    </main>
+    </main> -->
     <!-- * Fin Vista 9 -->
 
   </body>
